--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "bcrypt": "^5.0.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.10.15",
     "node-sass": "4.14.1",
     "nodemon": "^2.0.6",
     "react": "^17.0.1",
