--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.15",
+    "morgan": "^1.10.0",
     "node-sass": "4.14.1",
     "nodemon": "^2.0.6",
     "react": "^17.0.1",
